# sms_server

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  sms_service.sh  vercel.json
api/: main.py
api/config/: __init__.py  settings.py
api/middlewares/: logging_middleware.py
api/models/: schema.py  sms.py
api/routes/: __init__.py
api/routes/v1/: api.py
api/services/: sms_service.py
api/utils/: __init__.py  logger.py
backend/: __init__.py  main.py
backend/config/: settings.py
backend/middlewares/: logging_middleware.py
backend/models/: __init__.py  schema.py  sms.py
backend/routes/v1/: __init__.py  api.py
backend/services/: __init__.py  functions.py  sms_service.py
backend/utils/: logger.py
frontend/static/css/: styles.css
frontend/static/js/: app.js
frontend/templates/: base.html  index.html
