[tool.poetry]
name = "sms-server"
version = "0.1.0"
description = ""
authors = ["yyh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
sqlmodel = "^0.0.24"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.1"
jinja2 = "^3.1.6"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
